# Doom-Code-IDE

./: .gitignore  AI-INLINE-TEST-GUIDE.md  DOCUMENTATION-IMPLEMENTATION.md  INLINE-COMPLETION-FIX-SUMMARY.md  LICENSE  QUICK-FIX-CHECKLIST.md  README.md  debug-ai-inline.md  fix.cjs  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  utils.rs
src-tauri/src/commands/: ai.rs  build.rs  config.rs  file_ops.rs  folder_ops.rs  mod.rs  process.rs  search.rs  system.rs
src/components/: ActivityBar.tsx  BottomPanel.tsx  BuildConfigPanel.tsx  BuildProgressBar.tsx  CommandPalette.tsx  DocsPanel.css  DocsPanel.tsx  EditorArea.tsx  FileExplorer.tsx  MenuBar.tsx  Notifications.tsx  OutputPanel.tsx  RadialDoomMenu.tsx  SchemeEditor.tsx  SearchPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  SnippetsPanel.tsx  StartupOverlay.tsx  StatusBar.tsx  TabBar.tsx  TerminalPanel.tsx  TestCases.tsx  ThemeEditor.tsx  TitleBar.tsx
src/config/: aiModels.ts  defaultAIConfig.ts  defaultBuildProfiles.ts  defaultCommands.ts  defaultKeybindings.ts  defaultMenus.ts  defaultSettings.ts  defaultSnippets.ts  defaultTheme.ts  lockedAppearance.ts
src/editorSchemes/: catppuccinMocha.ts  clionDarcula.ts  doomPlusDark.ts  draculaScheme.ts  githubDark.ts  index.ts  monokaiPro.ts  oneDarkPro.ts  vscodeDarkPlus.ts  vscodeDarkPlusPlus.ts  vscodeDarkPlusPlusForge.ts  vscodeLightPlus.ts
src/hooks/: index.ts  useAIStatus.ts  useAutoSave.ts  (+4 more)
(+92 files in other folders)
