[package]
name = "doom-code"
version = "1.0.0"
description = "Doom Code: Competitive Programming IDE"
authors = ["Doom Code"]
edition = "2021"

[lib]
name = "doom_code_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
glob = "0.3"
regex = "1"
chrono = "0.4"
